# eudr-traceability

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 20260101_0000_0001_initial_schema.py
scripts/: seed_demo.py
src/eudr/: __init__.py  config.py  db.py  deps.py  errors.py  logging_config.py  main.py  security.py
src/eudr/api/: router.py
src/eudr/api/routes/: auth.py  custody.py  dds.py  harvests.py  health.py  lots.py  organizations.py  plots.py
src/eudr/models/: __init__.py  audit.py  base.py  custody.py  dds.py  deforestation.py  harvest.py  lot.py  organization.py  plot.py  user.py
src/eudr/schemas/: __init__.py  auth.py  common.py  custody.py  dds.py  harvest.py  lot.py  organization.py  plot.py
src/eudr/services/: __init__.py  chain_of_custody.py  dds_builder.py  deforestation.py  geo.py  traces_nt.py
src/eudr/workers/: celery_app.py  tasks.py
tests/: conftest.py  test_chain_of_custody.py  test_dds.py  test_geo.py  test_health.py  test_plots.py  test_traces_nt.py  test_worker_submit_dds.py
